--- a/vignettes/distribution-functions.Rmd
+++ b/vignettes/distribution-functions.Rmd
@@ -2,14 +2,14 @@
 title: "distribution-functions"
 output: html_document
 knit: (function(inputFile, encoding,...) {
-  rmarkdown::render(inputFile, encoding = encoding, output_dir = "~/Dropbox/featureSelection/tidyinfostats") })
+  rmarkdown::render(inputFile, encoding = encoding, output_dir = "~/Dropbox/classifierResult/output") })
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 library(dplyr)
 library(ggplot2)
-devtools::load_all("..")
+devtools::load_all("~/Git/classifier-result/")
 ```
 
 ## Distribution Functions
@@ -76,7 +76,6 @@ n3$plot(0,20)
 ```
 
 ```{r}
-devtools::load_all("..")
 n4 = KumaraswamyDistribution$new(mode=0.4,iqr=0.3)
 n4$plot(0,1)
 n5 = MirroredKumaraswamyDistribution$new(mode=0.6,iqr=0.3)
@@ -89,22 +88,17 @@ The theoretical entropy value of this distribution is
 paste0("Entropy: ",n3$theoreticalEntropy())
 ```
 
+
 ## Combining distributions
 
 Combining two distributions is also possible, and the default labelling can be overridden
 
 ```{r}
-cd = ConditionalDistribution$new()
-cd$withDistribution(1,n)
-cd$withDistribution(1,n2,"class 2")
-cd$plot(xmin=-5,xmax=5)
-```
 
-```{r}
-cd2 = ConditionalDistribution$new()
-cd2$withDistribution(1,n4,"class 1")
-cd2$withDistribution(1,n5,"class 2")
-cd2$plot(xmin=0,xmax=1)
+cd = ConditionalDistribution$new()
+cd$withDistribution(n)
+cd$withDistribution(n2,"class 2",1)
+cd$plot(xmin=-5,xmax=5)
 ```
 
 And we can sample from this combined distribution which is returned as a dataframe containing the class in "y"
@@ -119,8 +113,22 @@ A limited number of theoretical values are available for the combined distributi
 paste0("Mean: ",cd$theoreticalMean())
 paste0("Variance: ",cd$theoreticalVariance())
 paste0("Mutual information between x and y: ",cd$theoreticalMI())
-
 ```
+
+## classifier simultation
+
+A conditional probability distribution based on 2 kumuraswamy distributions
+
+```{r}
+cd2 = ConditionalDistribution$new()
+cd2$withDistribution(n4,"class 1",1)
+cd2$withDistribution(n5,"class 2",2)
+cd2$plot(xmin=0,xmax=1)
+```
+
+
+
+# Random distribution testing
 
 For testing purposes it is also useful to be able to generate a sample from a random collection of distributions with approximately sensible defaults.
 This is possible with a random distribution selector which will randomly pick from the known distributions
@@ -131,3 +139,32 @@ cd3$withRandomDistributions(3)
 cd3$plot(-5,5)
 ```
 
+# Multiple independent distribution combinations
+
+
+```{r}
+
+hb = ConditionalDistribution$new()
+  hb$withDistribution(LogNormalDistribution$new(mode=12,sd=1.3), "asymptomatic")
+  hb$withDistribution(LogNormalDistribution$new(mode=8,sd=1.5), "tired")
+  hb$withDistribution(LogNormalDistribution$new(mode=4,sd=2), "unwell")
+  
+k = ConditionalDistribution$new()
+  k$withDistribution(NormalDistribution$new(mean=1,sd=0.5), "unwell")
+  k$withDistribution(NormalDistribution$new(mean=2,sd=1), "asymptomatic")
+  k$withDistribution(NormalDistribution$new(mean=8,sd=3), "tired")
+
+mvd = MultivariableDistribution$new()
+mvd$withConditionalDistribution(hb,"haemoglobin")
+mvd$withConditionalDistribution(k,"serum k")
+  
+mvd$withClassWeights(list(
+  unwell=0.2,
+  asymptomatic=0.6,
+  tired=0.3
+))
+
+mvd$sample(100)
+mvd$plot()
+  
+```
